# spacebuild

./: .gitignore  project.godot
.github/workflows/: dev.yml  release.yml
common/: Cargo.toml
data/: point.png.import  reticle.png.import  spaceship.fbx.import
data/textures/: Intergalactic Spaceship Ao_Blender.jpg.import  Intergalactic Spaceship_color_4.jpg.import  Intergalactic Spaceship_curvature.jpg.import  Intergalactic Spaceship_emi.jpg.import  Intergalactic Spaceship_metalness.jpg.import  Intergalactic Spaceship_nmap_2_Tris.jpg.import  Intergalactic Spaceship_rough.jpg.import
godot/: core.gd  project.godot
godot/data/: spaceship.fbx.import
godot/theme/: SourceCodePro-Bold.ttf.import
scenes/: asteroid.tscn  body.tscn  debug.tscn  main.tscn  main.tscn.depren  moon.tscn  network.gd  network.gd.uid  planet.tscn  player.tscn  server.gd  spawner.gd.uid  star.tscn
scripts/: core.gd  galactic.gd  network.gd  network.gd.uid  player.gd  server.gd  server.gd.uid  spawner.gd  types.gd  types.gd.uid  ui.gd
server/: Cargo.toml
siege/: Cargo.toml
theme/: SourceCodePro-Bold.ttf.import
viewer/: Cargo.toml  main.rs
