[package]
name = "spacebuild-viewer"
version = "0.1.0"
authors = ["Pierre-Alexandre Goya <pierre.alexandre.goya@gmail.com>"]
edition = "2021"

[[bin]]
name = "spacebuild-viewer"
path = "main.rs"
test = false
doctest = false

[dependencies]
spacebuild = { path = "../library", version = "0.1.0"}
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"]} 
tokio = { version = "1.44.2", features = ["full"]}
uuid = "1.16.0"
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
